fix bg color on ie

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -81,7 +81,9 @@ div.footer {
 }
 
 body {
-  background: $brown-00 !important;
+  background: none;
+  background-color: $brown-00;
+  color: $brown-00;
 }
 
 
